--- a/karısık.html
+++ b/karısık.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Karışık</title>
+    <meta charset="UTF--8">
+    <meta name="viewport" content="width=device--width, initial--scale=1.0">
+    <meta http--equiv="X--UA--Compatible" content="IE=edge">
+    <title>Karısık</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logoweb.png" type="image/x-icon">
+    <link rel="icon" href="logoweb.png" type="image/x--icon">
 </head>
 <body>
     <footer class="footer">
@@ -22,31 +22,79 @@
             ≡
         </label>
         <ul>
-                <li><a href="anasayfa.html" class="active">⌂ Ana Sayfa</a></li>
-                <li><a href="disney.html" >Disney</a></li>
-                <li><a href="netflix.html" >Netflix</a></li>
-                <li><a href="method.html" >Method</a></li>
-                <li><a href="karısık.html">Karışık</a></li>
-                <li><a href="magaza.html">Mağaza</a></li>
-            </ul>
-    </div>
-    <div class="kutu">
-        <div class="baslik"><img src="karısıklogo2.jpg" alt=""></div>
-        <div class="ol">
-        <ol>
-            <li><b>110xBLU TV </b><i>18/06/23</i><a href="https://ay.live/aX5D">→TIKLA</a></li>
-            <li><b>İP TV </b><i>18/06/23</i><a href="https://ay.live/ifMl">→TIKLA</a></li>
-            <li><b>VALORANT SKİNLİ HESAP</b><i>16/06/23</i><a href="https://ay.live/nMsr9">→TIKLA</a></li>
-            <li><b>VALORANT ASİL BALTA VANDAL ETC.</b><i>16/06/23</i><a href="https://ay.live/D4UWb">→TIKLA</a></li>
-            <li><b> 132 Level AP Sunucu 34 Skinli Valorant Hesap</b><i>13/06/23</i><a href="https://ay.live/jnBh5H">→TIKLA</a></li>
-            <li><b>BLU TV HESAP : </b><i>13/06/23</i><a href="https://ay.live/KBrzc">→TIKLA</a></li>
-            <li><b>BLU TV HESAPLARI: </b><a href="https://ay.live/eMAuRm">→TIKLA</a>   </li>    
-            <li><b>NORD VPN HESAPLARI: </b><a href="https://ay.live/3yTM8E">→TIKLA</a></li>
-        </ol>
+            <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
+            <li><a href="magaza.html">Mağaza</a></li>
+        </ul>
     </div>
 
-    
+<div class="aciklama">
+    <h1>ÜCRETSİZ KARISIK METHOD VE HESAP</h1><br><br>
+    <div class="ac">
+        <p>Ücretsiz Karısık Hesap | paylaşım sitesi. Aktif gerçek Bedava Karısık Hesaplar. Ücretsiz Karısık senin için paylaşıyoruz. Para ödemeden istediğiniz kullanıcı adı ve şifreyi kullanın. Sitemiz sizden para istemez bütün Bedava Karısık ücretsizdir. Aşağıda ki bütün kullanıcı ID ve Şifreleri deneyin eğer hesaplar çalışmaz ise hesap oluşturucu aracını kullanın bu araç size anlık hesap almanızı sağlar.
 
-</body>
+            Lütfen aldığınız hesapların şifrelerini değiştirmeyin, paylaştığımız bütün hesaplar bizim ve kullanıcıların paylaştığı Bedava Karısık Hesaplardır. Sitemiz günlük olarak bütün hesapları otomatik yeniler ve kullanılmamış aktif çalışan Ücretsiz Disn Hesapları paylaşır yani her gün güncel Bedava Karısık Hesap paylaşılır. Eğer hesaplar çalışmıyorsa 24 saat sonra tekrar sitemizi ziyaret edin inanın yeni aktif çalışan ücretsiz Karısık Bedava Hesaplar seni bekliyor olacak.</p>
+    </div>
+</div>
+
+
+
+<table class="a">
+    <tr>
+        <th>HESAP TÜRÜ</th>
+        <th>ADET</th>
+        <th>TARİH</th>
+        <th>LİNK</th>
+    </tr>
+
+
+    <tr>
+        <td><c>FAKE NO ALMA 4Ü 1 ARADA:</c></td>
+        <td><l>1x</l></td>
+        <td><d>--</d></td>
+        <td><a href="https://ay.live/AG6b6Q">TIKLA</a></td>
+    </tr>
+
+    <tr>
+        <td><c>Ücretsiz 0850 Numara Alma 2023</c></td>
+        <td><l>1x</l></td>
+        <td><d>--</d></td>
+        <td><a href="https://ay.live/ibLCi">TIKLA</a></td>
+    </tr>
+
+    <tr>
+        <td><c>INSTAGRAM TÜM FORUMLAR</c></td>
+        <td><l>1x</l></td>
+        <td><d>--</d></td>
+        <td><a href="https://ay.live/g0je">TIKLA</a></td>
+    </tr>
+
+
+    <tr>
+        <td><c>MARTI 30TL METHOD:</c></td>
+        <td><l>1x</l></td>
+        <td><d>--</d></td>
+        <td><a href="https://ay.live/Ic9E">TIKLA</a></td>
+    </tr><br><br>
+
+
+    <div class="aciklama2">
+        <h1><c>Karısık Bedava Hesap</c></h1>
+        <div class="ac3">
+            <p>Karısık, dünya genelindeki en büyük eğlence şirketlerinden biridir. Geçmişte yalnızca çizgi filmler ve animasyonlar üreten şirket, artık Marvel, Star Wars ve National Geographic gibi markaları da bünyesinde barındırıyor. Bu nedenle, Karısık hayranları için harika bir haber var: Karısık, bedava hesap sunuyor!</p><br>
+            <p>Bdava hesap, Karısık+ adlı yayın hizmetinin bir parçasıdır. Karısık+, platformun tüm içeriğine erişim sağlayan bir abonelik hizmeti olarak öne çıkıyor. Ancak, bedava hesap farklıdır. Bedava hesap sahipleri, sınırlı bir içerik kütüphanesine erişebilir ancak bu içerikler ücretsizdir.</p><br>
+            <p>Bedava hesap, Netflix’in içeriklerini sevmeyen veya sadece Karısık+’a kaydolmaya hazır olmayan insanlar için mükemmel bir seçenektir. Bir bedava hesap sahibi, Karısık çizgi filmlerine, belgesellere ve diğer yapımlara göz atabilir. Tabii ki, sınırlı içerik kütüphanesi nedeniyle herhangi bir Marvel veya Star Wars içeriği bulamazsınız.</p><br>
+            <p>Ancak, bedava hesap sahipleri bile Karısık+’ın sunduğu avantajlardan bazılarından yararlanabilir. Örneğin, çocukların seveceği Karısık Channel ve Karısık Junior kanallarının canlı yayınlarına erişim sağlayabilirsiniz. Ayrıca, bedava hesap sahipleri bile Karısık+’ın sunduğu orijinal yapımlara göz atabilirler.</p> <br>
+            <p>Karısık Bedava Hesap, herkesin ilgisini çeken harika bir fırsattır. Belki sınırlı içerik kütüphanesi nedeniyle tam anlamıyla Karısık+’a kaydolmayı düşünmeyebilirsiniz, ancak yine de Karısık hayranıysanız, ücretsiz bir hesabın avantajlarından yararlanabilirsiniz. Ya da belki Karısık+’ı henüz denemediniz ama önce platformun ne sunduğunu görmek istiyorsunuz. Her durumda, Karısık Bedava Hesap size mükemmel bir fırsat sunuyor!</p><br>
+
+
+
+        </div>
+
+
+    </div>
+
+
+
+
+</table>
 </html> 
-
