--- a/anasayfa.html
+++ b/anasayfa.html
@@ -156,7 +156,7 @@
         </div>
         <div class="u3">
             <p><c><small>Ücretsiz Method ve diğerlerinden farklı hesaplar içermektedir.Hesapların kalıcı olma süresi tarihine gore değişmektedir.Para ödemeden istediğiniz kullanıcı adı ve şifreyi kullanın. Sitemiz sizden para istemez</small></c></p>
-            <d><a href="karısık.html">Tıkla siteye git...</a></d>
+            <d><a href="karışık.html">Tıkla siteye git...</a></d>
         </div>
     </div>
 </div>
